--- a/.github/workflows/build-test-push.yml
+++ b/.github/workflows/build-test-push.yml
@@ -577,7 +577,7 @@ jobs:
             rm -f pkgs_${key}.json
           done
 
-          # Compress and encode JSON into a single-line lable payload
+          # Compress and encode JSON into a single-line label payload
           RCHUNK_INFO_LABEL=$(gzip -c "rechunk_${VMJ}_${IMT}.json" | base64 -w0)
           echo "RCHUNK_INFO_LABEL=${RCHUNK_INFO_LABEL}" >> "$GITHUB_ENV"
           echo "LABEL_KEY=${LABEL_KEY}" >> "$GITHUB_ENV"
@@ -608,7 +608,7 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: |
-            ${{ env.LABLE_KEY }}=${{ env.RCHUNK_INFO_LABEL }}
+            ${{ env.LABEL_KEY }}=${{ env.RCHUNK_INFO_LABEL }}
 
       -
         name: Prepare Mattermost message
