Tag AlmaLinux 10 amd64 also with 'v3' variant
We should tag the default AlmaLinux 10 build with platform amd64/v3,
this as otherwise v2 gets selected before v3 when doing a docker pull.

This is because best match is pulled, and as v2 is more specific, this
one gets pulled instead of the v3 image.

Fixes #71

Signed-off-by: Jean-Louis Dupond <jean-louis@dupond.be>

--- a/.github/workflows/build-test-push.yml
+++ b/.github/workflows/build-test-push.yml
@@ -23,10 +23,10 @@ on:
           default: '10'
           type: choice
           options:
-            - 10-kitten
-            - 10
-            - 9
-            - 8
+            - '10-kitten'
+            - '10'
+            - '9'
+            - '8'
 
         type_default:
           description: 'default'
@@ -200,7 +200,7 @@ jobs:
               8|9)
                 platforms="linux/386, ${platforms}" ;;
               10*)
-                platforms="linux/amd64/v2, ${platforms}" ;;
+                platforms="linux/amd64/v3, linux/amd64/v2, ${platforms}" ;;
             esac
             echo "platforms=${platforms}" >> $GITHUB_ENV
 
